tests/functional/lang/eval-fail-bad-string-interpolation-3.err.exp
error:
       … while evaluating a path segment
         at /pwd/eval-fail-bad-string-interpolation-3.nix:1:3:
            1| ''${x: x}''
             |   ^
            2|

       error: cannot coerce a function to a string: «lambda @ /pwd/eval-fail-bad-string-interpolation-3.nix:1:5»
